arm-templates/vnet-2-subnets.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "serviceShortName": {
      "type": "string",
      "maxLength": 5,
      "minLength": 5,
      "metadata": {
        "description": "Short service prefix for resources."
      }
    },
    "subnet1NameSuffix": {
      "type": "string",
      "defaultValue": "test1",
      "maxLength": 2,
      "minLength": 10,
      "metadata": {
        "description": "Subnet 1 Name"
      }
    },
    "subnet2NameSuffix": {
      "type": "string",
      "defaultValue": "test2",
      "maxLength": 2,
      "minLength": 10,
      "metadata": {
        "description": "Subnet 2 Name"
      }
    },
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "Location for all resources."
      }
    }
  },
  "variables": {
    "nsgName": "[concat(parameters('serviceShortName'), '-nsg')]",
    "vnetName": "[concat(parameters('serviceShortName'), '-vnet')]",
    "vnetAddressPrefix": "10.0.0.0/16",
    "subnet1Prefix": "10.0.0.0/24",
    "subnet2Prefix": "10.0.1.0/24",
    "subnet1Name": "[concat(variables('vnetName'), '-subnet01-', parameters('subnet1NameSuffix'))]",
    "subnet2Name": "[concat(variables('vnetName'), '-subnet02-', parameters('subnet2NameSuffix'))]",
    "subnet1Id": "[resourceId('Microsoft.Network/virtualNetworks/subnets',variables('vnetName'),variables('subnet1Name'))]",
    "subnet2Id": "[resourceId('Microsoft.Network/virtualNetworks/subnets',variables('vnetName'),variables('subnet2Name'))]"
  },
  "resources": [
    {
      "comments": "Network Security Group",
      "name": "[variables('nsgName')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2017-09-01",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowHttpAll",
            "properties": {
              "description": "Allow http traffic to web servers",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "direction": "Inbound",
              "access": "Allow",
              "priority": 100,
              "protocol": "Tcp",
              "destinationPortRange": "80",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "AllowSshAll",
            "properties": {
              "description": "Allow SSH traffic to web servers",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "direction": "Inbound",
              "access": "Allow",
              "priority": 200,
              "protocol": "Tcp",
              "destinationPortRange": "22",
              "destinationAddressPrefix": "*"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2017-06-01",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[variables('vnetName')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[concat('Microsoft.Network/networkSecurityGroups/', variables('nsgName'))]"
      ],
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('vnetAddressPrefix')]"
          ]
        }
      },
      "resources": [
        {
          "apiVersion": "2017-06-01",
          "type": "subnets",
          "location": "[parameters('location')]",
          "name": "[variables('subnet1Name')]",
          "dependsOn": [
            "[variables('vnetName')]"
          ],
          "properties": {
            "addressPrefix": "[variables('subnet1Prefix')]",
            "networkSecurityGroup": {
              "id": "[resourceId('Microsoft.Network/networkSecurityGroups/', variables('nsgName'))]"
            }
          }
        },
        {
          "apiVersion": "2017-06-01",
          "type": "subnets",
          "location": "[parameters('location')]",
          "name": "[variables('subnet2Name')]",
          "dependsOn": [
            "[variables('vnetName')]"
          ],
          "properties": {
            "addressPrefix": "[variables('subnet2Prefix')]",
            "networkSecurityGroup": {
              "id": "[resourceId('Microsoft.Network/networkSecurityGroups/', variables('nsgName'))]"
            }
          }
        }
      ]
    }
  ],
  "outputs": {
    "subnet1Id": {
      "type": "string",
      "value": "[variables('subnet1Id')]"
    },
    "subnet2Id": {
      "type": "string",
      "value": "[variables('subnet2Id')]"
    }
  }
}
